@@ -1,3 +1,13 @@
+2003-01-10  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+	* src/network_support.c (init_all_network_interfaces): Added
+	support for a hard coded domain name. Inspired by Motoya Kurotsu.
+	 
+2003-01-09  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+	* src/network_support.c (init_all_network_interfaces): Added
+	support for a hard coded, default DNS server address.
+
 2003-01-12  Jonathan Larmour  <jifl@eCosCentric.com>
 
 	* src/bootp_support.c: Fix licence which should always have been
